# spectre

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  main.cpp  style.clang-format
Release/src/analysis/: Makefile  cmake_install.cmake
Release/src/logic/: Makefile  cmake_install.cmake
Release/src/parser/: Makefile  cmake_install.cmake
Release/src/program/: Makefile  cmake_install.cmake
Release/src/util/: Makefile  cmake_install.cmake
examples/: absolute  absolute_prop1  absolute_prop2  check_equal_set_flag  copy  copyOdd  copyPartial  copyPositive  copy_nonzero_prop1  copy_nonzero_prop2  copy_odd  copy_partial  copy_positive  copy_two_indices  find  find1_prop1  find1_prop2  find1_prop3  find2  find2_prop1  find2_prop2  find2_prop3  findMax  find_max_and_second_max_prop2  find_max_up_to_prop1  find_max_up_to_prop2  find_min  find_min_up_to  find_sentinel  find_two_max_prop1  find_two_max_prop2  inPlaceMax  inPlaceMaxTest  inPlaceMaxTest2  increment_by_one_prop1  indexn_is_arraylength  initEven  initNonConstant  initPartial  init_conditionally_prop1  (+26 more)
examples/arithmetic_reasoning/: absolute  copyOdd
examples/easy/: copy  copyPartial  copyPositive  init  init2  init3  initNonConstant  initPartial  reverse
examples/easy/i_is_equal_loop_condition_value/: copy2  copyPartial2  init4  initNonConstant2  initPartial2  reverse2
examples/easy/trivial/: atleast_one_iteration
examples/new_svcomp/: both_or_none  check_equal_set_flag  copy_two_indices  find_max_and_second_max_prop1  find_max_and_second_max_prop2  find_max_start_from_second  find_sentinel  increment_by_one_prop2  init_partial_weird_prop1  init_partial_weird_prop2  vector_addition
logic/: Formula.cpp  Formula.hpp  Signature.cpp  Signature.hpp  Sort.cpp  Sort.hpp  Term.cpp  Term.hpp  Theory.cpp  Theory.hpp
parser/: GclParser.cpp  GclParser.hpp  GclParser.yy  GclScanner.cpp  GclScanner.ll  Location.hpp  stack.hh
parser_generator/: GclParser.yy  GclScanner.ll  Makefile
program/: Expression.cpp  Expression.hpp  GclAnalyzer.cpp  GuardedCommandCollection.cpp  InvariantHelper.cpp  InvariantHelper.hpp  Properties.cpp  Properties.hpp  Type.hpp  Variable.cpp  Variable.hpp
src/: main.cpp
src/analysis/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  Properties.cpp  Properties.hpp  PropertiesTime.cpp  PropertiesTime.hpp
src/logic/: #Theory.hpp#  .#Theory.hpp  CMakeLists.txt  Formula.cpp  Formula.hpp  Signature.cpp  Signature.hpp  Sort.cpp  Sort.hpp  Term.cpp  Term.hpp  Theory.cpp  Theory.hpp
src/parser/: CMakeLists.txt  GclParser.yy  GclParsingContext.cpp  GclParsingContext.hpp  GclScanner.ll
src/program/: #Expression.cpp#  .#Expression.cpp  Assignment.cpp  Assignment.hpp  CMakeLists.txt  Expression.cpp  Expression.hpp  GclAnalyzer.cpp  GclAnalyzer.hpp  GuardedCommandCollection.cpp  GuardedCommandCollection.hpp  Program.cpp  Program.hpp  ProgramLocation.cpp  ProgramLocation.hpp  ProgramRule.cpp  ProgramRule.hpp  Properties.cpp  Properties.hpp  Type.cpp  Type.hpp  Variable.cpp  Variable.hpp
src/util/: CMakeLists.txt  Options.cpp  Options.hpp  Output.cpp  Output.hpp
util/: Options.cpp  Options.hpp
